// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/executeScript executes failing script 1`] = `[StatusCodeError: 500 - {"statusCode":500,"error":"Internal Server Error","message":"123"}]`;

exports[`/queueJobs executes failing script in the background and sends status 1`] = `
Array [
  Object {
    "id": "abc.js",
    "status": "loading",
    "timestamp": 0,
  },
  Object {
    "id": "abc.js",
    "status": "fail",
    "timestamp": 1,
  },
]
`;

exports[`/queueJobs executes successfull script in the background and sends status 1`] = `
Array [
  Object {
    "id": "abc.js",
    "status": "loading",
    "timestamp": 0,
  },
  Object {
    "id": "abc.js",
    "result": 123,
    "status": "success",
    "timestamp": 1,
  },
]
`;

exports[`/saveScipt throws error if id is not specified 1`] = `[StatusCodeError: 500 - {"statusCode":500,"error":"Internal Server Error","message":"id is required"}]`;
